// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageExtensionInspector set new name input show default name 1`] = `
Array [
  <button
    className="ant-btn ant-btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      设为入口
    </span>
  </button>,
  <input
    className="ant-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="new1"
  />,
]
`;

exports[`PackageExtensionInspector show mark entry button 1`] = `
Array [
  <button
    className="ant-btn ant-btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      设为入口
    </span>
  </button>,
  <input
    className="ant-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="e1"
  />,
]
`;

exports[`PackageExtensionInspector show nothing 1`] = `null`;

exports[`PackageExtensionInspector show unmark entry button 1`] = `
Array [
  <button
    className="ant-btn ant-btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      取消设为入口
    </span>
  </button>,
  <input
    className="ant-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="e1"
  />,
]
`;
